--- a/data/pages/canary.mdx
+++ b/data/pages/canary.mdx
@@ -62,7 +62,8 @@ curl https://opensats.org/docs/dergigi.pub.asc | gpg --import
 gpg --auto-key-retrieve --verify canary.txt.asc
 ```
 
-4. You should get an output that is similar to the following (note the date that the canary was signed):
+4. You should get an output that is similar to the following (make sure to check
+the date that the canary was signed):
 
 ```bash
 gpg: Signature made Wed  7 Aug 23:30:46 2024 WEST
