--- a/data/pages/canary.mdx
+++ b/data/pages/canary.mdx
@@ -5,6 +5,7 @@ image: /static/images/avatar.png
 layout: PageLayout
 ---
 
+Code is speech. No privacy, no freedom.
 
 ```
 -----BEGIN PGP SIGNED MESSAGE-----
