Add `core` tag to core contributor announcements

--- a/data/blog/josi-baker-receives-opensats-lts-grant.mdx
+++ b/data/blog/josi-baker-receives-opensats-lts-grant.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Long-Term Support For Josi Baker"
 date: '2023-08-16'
-tags: ['OpenSats', 'grants', 'bitcoin', 'LTS']
+tags: ['OpenSats', 'grants', 'bitcoin', 'LTS', 'core']
 draft: false
 authors: ['jamesob']
 images: ['/static/images/blog/05-josi.jpg']
