Add note on the `WARNING` message that might pop up
Co-authored-by: Bayer <55212954+Bayernatoor@users.noreply.github.com>

--- a/data/pages/canary.mdx
+++ b/data/pages/canary.mdx
@@ -71,5 +71,10 @@ gpg: Signature made Wed  7 Aug 23:30:46 2024 WEST
 gpg:                using RSA key 8198A18530A522A09561243989C4A25E69A5DE7F
 gpg: Good signature from "Gigi D. <gigi@opensats.org>" [ultimate]
 ```
+Unless you've taken steps to build a trust path to Gigi's key, you will see a similar warning as below. However, it can be disregarded if you've gotten "Good signature".
 
+```bash
+gpg: WARNING: This key is not certified with a trusted signature!
+gpg:          There is no indication that the signature belongs to the owner.
+Primary key fingerprint: 8198 A185 30A5 22A0 9561  2439 89C4 A25E 69A5 DE7F
 [scs]: /docs/canary.txt.asc
