End on a high note

--- a/data/pages/canary.mdx
+++ b/data/pages/canary.mdx
@@ -79,4 +79,6 @@ gpg:          There is no indication that the signature belongs to the owner.
 Primary key fingerprint: 8198 A185 30A5 22A0 9561  2439 89C4 A25E 69A5 DE7F
 ```
 
+Stay safe everyone, and keep building.
+
 [scs]: /docs/canary.txt.asc
