Edit requests by Grantee Nostroots
From Grantee to Rob to ARVIN:

"Just saw the announcement, great!
Three little requests:
Can you remove the first link Nostroots (github.io) at https://opensats.org/blog/nostr-grants-august-2024#nostroots? That page is from a while ago and hardly relevant now. The nostroots repo is a good target if you want to link somewhere from the first word.
Maybe you can remove the link to Couchsurfing (I don’t like the company).
We have been 100% open source from the start so maybe you can remove this part: 'to become open-source'"

--- a/data/blog/nostr-grants-august-2024.mdx
+++ b/data/blog/nostr-grants-august-2024.mdx
@@ -118,17 +118,17 @@ License: AGPL-3.0
 
 ### Nostroots
 
-[Nostroots](https://trustroots.github.io/nostroots/) is an initiative to migrate
+[Nostroots](https://github.com/Trustroots/nostroots) is an initiative to migrate
 [Trustroots.org](http://trustroots.org)—a social network with over 100,000
 members—onto the nostr protocol. Trustroots offers a platform similar to
-[Couchsurfing](https://about.couchsurfing.com/about/how-it-works/) with an
+Couchsurfing with an
 alternative and more decentralized approach. The project aims to introduce its
 users to public/private key technology and expand its use cases beyond
 hospitality, including potential projects like a nostr-based ride-sharing app.
 The transition to nostr seeks to ensure the platform's independence from
 centralized servers by 2027, fostering privacy, freedom of movement, and
-communication. The team's goal is to complete this migration to become
-open-source without disrupting the user experience, ultimately making their
+communication. The team's goal is to complete this migration 
+without disrupting the user experience, ultimately making their
 ongoing involvement unnecessary.
 
 Repository: [Trustroots/nostroots](https://github.com/Trustroots/nostroots)  
