Header anchor links

--- a/data/blog/caring-for-bitcoin-core.mdx
+++ b/data/blog/caring-for-bitcoin-core.mdx
@@ -16,14 +16,12 @@ Bitcoin's reference implementation.
 
 Listed in no particular order, they are:
 
-[@tdb3](#@tdb3)
-
-[@davidgumberg (David Gumberg)](#@davidgumberg)
-
-[@hodlinator](#@hodlinator)
+- [tdb3](#tdb3)
+- [davidgumberg (David Gumberg)](#davidgumberg-david-gumberg)
+- [hodlinator](#hodlinator)
 
 In addition to the above, we are supporting the development of the [Bitcoin Core
-App](#Bitcoin-Core-App), a modernized user interface for Bitcoin Core.
+App](#bitcoin-core-app), a modernized user interface for Bitcoin Core.
 
 We are dedicated to nurturing both established and emerging talent in the
 Bitcoin developer community, ensuring that Bitcoin Core remains a strong and
@@ -42,7 +40,7 @@ and how the grants will support their efforts.
 
 ---
 
-### @tdb3
+### tdb3
 
 [tdb3](https://github.com/tdb3) focuses on improving stability, security, and
 performance by actively engaging in the review and authoring of [pull requests
@@ -65,7 +63,7 @@ Repository: [bitcoin/bitcoin\
 
 License: MIT
 
-### @davidgumberg (David Gumberg)
+### davidgumberg (David Gumberg)
 
 [David](https://github.com/davidgumberg) focuses on optimizing the [Initial
 Block Download
@@ -96,7 +94,7 @@ Repository: [bitcoin/bitcoin\
 
 License: MIT
 
-### @hodlinator
+### hodlinator
 
 [Hodlinator](https://github.com/hodlinator) is focused on enhancing the [Bitcoin
 Core](https://bitcoincore.org/) codebase through detailed code reviews and
@@ -109,7 +107,7 @@ bring a meticulous and thorough approach to Bitcoin Core.
 
 This grant will support efforts in reviewing pull requests from other
 contributors, diagnosing and addressing the slowness of the
-`[feature_dbcrash.py](https://github.com/bitcoin/bitcoin/pull/29791)` test,
+[`feature_dbcrash.py`](https://github.com/bitcoin/bitcoin/pull/29791) test,
 enhancing build information logs for better troubleshooting, and creating a tool
 to identify regressions by analyzing the impact of different commits on test
 outcomes. Additionally, the project will modify test timeout behaviors to
