--- a/data/blog/caring-for-bitcoin-core.mdx
+++ b/data/blog/caring-for-bitcoin-core.mdx
@@ -5,7 +5,7 @@ tags: ['OpenSats', 'grants', 'bitcoin', 'core', 'wave']
 draft: false
 authors: ['dergigi', 'arvin']
 images: ['/static/images/blog/TODO.jpg']
-summary: "OpenSats is funding 3 open-source developers and 1 project for Bitcoin Core."
+summary: "OpenSats announces a new round of grants focused on Bitcoin Core development."
 ---
 
 In keeping with our commitment to supporting the Bitcoin ecosystem, OpenSats is
