--- a/data/blog/caring-for-bitcoin-core.mdx
+++ b/data/blog/caring-for-bitcoin-core.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Caring For Bitcoin Core"
+title: "Caring For Core"
 date: '2024-08-15'
 tags: ['OpenSats', 'grants', 'bitcoin', 'core', 'wave']
 draft: false
