Add `@` to handles

--- a/data/blog/caring-for-bitcoin-core.mdx
+++ b/data/blog/caring-for-bitcoin-core.mdx
@@ -16,9 +16,10 @@ Bitcoin's reference implementation.
 
 Listed in no particular order, they are:
 
-- [tdb3](#tdb3)
-- [davidgumberg (David Gumberg)](#davidgumberg-david-gumberg)
-- [hodlinator](#hodlinator)
+- [@tdb3](#tdb3)
+- [@davidgumberg (David Gumberg)](#davidgumberg-david-gumberg)
+- [@hodlinator](#hodlinator)
+- [Bitcoin Core App](#bitcoin-core-app)
 
 In addition to the above, we are supporting the development of the [Bitcoin Core
 App](#bitcoin-core-app), a modernized user interface for Bitcoin Core.
@@ -40,7 +41,7 @@ and how the grants will support their efforts.
 
 ---
 
-### tdb3
+### @tdb3
 
 [tdb3](https://github.com/tdb3) focuses on improving stability, security, and
 performance by actively engaging in the review and authoring of [pull requests
@@ -63,7 +64,7 @@ Repository: [bitcoin/bitcoin\
 
 License: MIT
 
-### davidgumberg (David Gumberg)
+### @davidgumberg (David Gumberg)
 
 [David](https://github.com/davidgumberg) focuses on optimizing the [Initial
 Block Download
@@ -94,7 +95,7 @@ Repository: [bitcoin/bitcoin\
 
 License: MIT
 
-### hodlinator
+### @hodlinator
 
 [Hodlinator](https://github.com/hodlinator) is focused on enhancing the [Bitcoin
 Core](https://bitcoincore.org/) codebase through detailed code reviews and
