--- a/data/blog/caring-for-bitcoin-core.mdx
+++ b/data/blog/caring-for-bitcoin-core.mdx
@@ -3,7 +3,7 @@ title: "Caring For Core"
 date: '2024-08-15'
 tags: ['OpenSats', 'grants', 'bitcoin', 'core', 'wave']
 draft: false
-authors: ['dergigi', 'arvin']
+authors: ['jamesob', 'dergigi', 'arvin']
 images: ['/static/images/blog/TODO.jpg']
 summary: "OpenSats announces a new round of grants focused on Bitcoin Core development."
 ---
