--- a/data/blog/caring-for-bitcoin-core.mdx
+++ b/data/blog/caring-for-bitcoin-core.mdx
@@ -182,7 +182,8 @@ the next generation of developers and advancing the development and maintenance
 of critical infrastructure, we can help ensure the sustainability and
 decentralization of the Bitcoin network. Together, we can build a stronger
 ecosystem that upholds the values of open-source development and financial
-freedom.\
+freedom.
+
 We invite aspiring and seasoned Bitcoin Core developers alike to [apply for
 funding](/apply), and we invite everyone else to donate to our cause:
 
