Add link to Bitcoin Core Testing Suite

--- a/data/blog/caring-for-bitcoin-core.mdx
+++ b/data/blog/caring-for-bitcoin-core.mdx
@@ -22,7 +22,10 @@ Listed in no particular order, they are:
 - [Bitcoin Core App](#bitcoin-core-app)
 
 In addition to the above, we are supporting the development of the [Bitcoin Core
-App](#bitcoin-core-app), a modernized user interface for Bitcoin Core.
+App](#bitcoin-core-app), a modernized user interface for Bitcoin Core, and the
+[Bitcoin Core Testing
+Suite](/blog/bitcoin-grants-feb-2024#bitcoin-core-testing-suite), as announced
+earlier this year.
 
 We are dedicated to nurturing both established and emerging talent in the
 Bitcoin developer community, ensuring that Bitcoin Core remains a strong and
