Fix formatting (line breaks)

--- a/data/blog/caring-for-bitcoin-core.mdx
+++ b/data/blog/caring-for-bitcoin-core.mdx
@@ -59,11 +59,8 @@ further stabilize and secure the network. These activities aim to help
 developers ensure the continued reliability and resilience of Bitcoin Core,
 contributing to the overall robustness of the Bitcoin network.
 
-Repository: [bitcoin/bitcoin\
-](https://github.com/bitcoin/bitcoin)PRs:
-[created](https://bitcoinacks.com/?flt1_author_contains=tdb3),
-[reviewed](https://bitcoinacks.com/?flt1_reviewer_contains=tdb3)
-
+Repository: [bitcoin/bitcoin](https://github.com/bitcoin/bitcoin)  
+PRs: [created](https://bitcoinacks.com/?flt1_author_contains=tdb3), [reviewed](https://bitcoinacks.com/?flt1_reviewer_contains=tdb3)  
 License: MIT
 
 ### @davidgumberg (David Gumberg)
@@ -90,11 +87,8 @@ using profiling tools and considering theoretical improvements. The overarching
 goal is to lower the barriers to running a full Bitcoin Core node, thereby
 promoting greater decentralization and resilience within the Bitcoin network.
 
-Repository: [bitcoin/bitcoin\
-](https://github.com/bitcoin/bitcoin)PRs:
-[created](https://bitcoinacks.com/?flt1_author_contains=davidgumberg),
-[reviewed](https://bitcoinacks.com/?flt1_reviewer_contains=davidgumberg)
-
+Repository: [bitcoin/bitcoin ](https://github.com/bitcoin/bitcoin)  
+PRs: [created](https://bitcoinacks.com/?flt1_author_contains=davidgumberg), [reviewed](https://bitcoinacks.com/?flt1_reviewer_contains=davidgumberg)  
 License: MIT
 
 ### @hodlinator
@@ -119,11 +113,8 @@ activities aim to enhance the robustness and reliability of Bitcoin Core by
 improving the efficiency and accuracy of the review process and addressing
 critical elements within the codebase.
 
-Repository: [bitcoin-core\
-](https://github.com/bitcoin-core)PRs:
-[created](https://bitcoinacks.com/?flt1_author_contains=hodlinator),
-[reviewed](https://bitcoinacks.com/?flt1_reviewer_contains=hodlinator)
-
+Repository: [bitcoin-core](https://github.com/bitcoin-core)  
+PRs:[created](https://bitcoinacks.com/?flt1_author_contains=hodlinator), [reviewed](https://bitcoinacks.com/?flt1_reviewer_contains=hodlinator)  
 License: MIT
 
 ### Bitcoin Core App
@@ -142,9 +133,7 @@ with mobile devices, particularly targeting Android platforms. The aim is to
 make running a full Bitcoin node more accessible and convenient, allowing users
 to participate in the Bitcoin network directly from their mobile phones.
 
-Repository:
-[bitcoin-core/gui-qml](https://github.com/bitcoin-core/gui-qml?tab=MIT-1-ov-file)
-
+Repository: [bitcoin-core/gui-qml](https://github.com/bitcoin-core/gui-qml?tab=MIT-1-ov-file)  
 License: MIT
 
 ---
