--- a/data/blog/caring-for-bitcoin-core.mdx
+++ b/data/blog/caring-for-bitcoin-core.mdx
@@ -113,7 +113,7 @@ activities aim to enhance the robustness and reliability of Bitcoin Core by
 improving the efficiency and accuracy of the review process and addressing
 critical elements within the codebase.
 
-Repository: [bitcoin-core](https://github.com/bitcoin-core)  
+Repository: [bitcoin/bitcoin](https://github.com/bitcoin/bitcoin)  
 PRs: [created](https://bitcoinacks.com/?flt1_author_contains=hodlinator), [reviewed](https://bitcoinacks.com/?flt1_reviewer_contains=hodlinator)  
 License: MIT
 
