Only list active LTS grants
Gleb is paused

--- a/data/blog/caring-for-bitcoin-core.mdx
+++ b/data/blog/caring-for-bitcoin-core.mdx
@@ -144,8 +144,7 @@ Core developers, which currently supports [Marco
 Falke](/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors),
 [Josi Baker](/blog/josi-baker-receives-opensats-lts-grant), [Sjors
 Provoost](/blog/sjors-provoost-receives-opensats-lts-grant), [Vasil
-Dimov](/blog/vasil-dimov-receives-lts-grant), [Gleb
-Naumenko](/blog/gleb-naumenko-receives-lts-grant), [Will
+Dimov](/blog/vasil-dimov-receives-lts-grant), [Will
 Clark](/blog/will-clark-receives-lts-grant-for-bitcoin-core),
 [0xB10C](/blog/furszy-receives-lts-grant-for-bitcoin-core), and [Bruno
 Garcia](/blog/bruno-garcia-receives-lts-grant). We are determined to provide
