Add links to Brink and HRF

--- a/data/blog/caring-for-bitcoin-core.mdx
+++ b/data/blog/caring-for-bitcoin-core.mdx
@@ -170,9 +170,9 @@ We are grateful to our donors who make our grant initiatives possible and invite
 others to [join us in supporting the future of Bitcoin](/donate). By empowering
 the next generation of developers and advancing the development and maintenance
 of critical infrastructure, we can help ensure the sustainability and
-decentralization of the Bitcoin network. Together, we can build a stronger
-ecosystem that upholds the values of open-source development and financial
-freedom.
+decentralization of the Bitcoin network. [Together][brink], we can build a stronger
+ecosystem that upholds the values of open-source development and [financial
+freedom][hrf].
 
 We invite aspiring and seasoned Bitcoin Core developers alike to [apply for
 funding](/apply), and we invite everyone else to donate to our cause:
@@ -180,3 +180,6 @@ funding](/apply), and we invite everyone else to donate to our cause:
 <center>
     <DonateToGeneralFundButton/>
 </center>
+
+[brink]: https://brink.dev
+[hrf]: https://hrf.org/devfund
