blog: make Arvin first author on Caring for Core

--- a/data/blog/caring-for-bitcoin-core.mdx
+++ b/data/blog/caring-for-bitcoin-core.mdx
@@ -3,7 +3,7 @@ title: "Caring For Core"
 date: '2024-08-14'
 tags: ['OpenSats', 'grants', 'bitcoin', 'core', 'wave']
 draft: false
-authors: ['jamesob', 'dergigi', 'arvin']
+authors: ['arvin', 'dergigi', 'jamesob']
 images: ['/static/images/blog/48-caring-for-bitcoin-core.jpg']
 summary: "OpenSats announces a new round of grants focused on Bitcoin Core development."
 ---
