add jamesob as Donenfeld coauthor

--- a/data/blog/jason-donenfeld-lts-grant.mdx
+++ b/data/blog/jason-donenfeld-lts-grant.mdx
@@ -3,7 +3,7 @@ title: "Long-Term Support For Jason Donenfeld"
 date: '2004-08-10'
 tags: ['OpenSats', 'grants', 'bitcoin', 'LTS', 'core']
 draft: false
-authors: ['arvin', 'dergigi']
+authors: ['arvin', 'dergigi', 'jamesob']
 images: ['/static/images/blog/46-Jason-Donenfeld.jpg']
 summary: "OpenSats Welcomes Jason Donenfeld as an LTS Grantee."
 ---
