--- a/data/blog/daniele-receives-lts-grant.mdx
+++ b/data/blog/daniele-receives-lts-grant.mdx
@@ -8,6 +8,42 @@ images: ['/static/images/blog/TODO.jpg']
 summary: "OpenSats Welcomes Daniele as an LTS Grantee."
 ---
 
+OpenSats is pleased to announce that [Daniele](https://github.com/dtonon) is
+joining our roster of long-term support grantees for his contributions to the
+nostr ecosystem.
+
+Daniele's experience in ecommerce development, expertise in UI/UX design, and
+deep understanding of the [outbox
+model](https://highscalability.com/gossip-protocol-explained/) has made him a
+key contributor in improving accessibility, usability, and scalability for users
+across different platforms. He has contributed to several nostr projects,
+including [Gossip](https://github.com/mikedilger/gossip#) and
+[Coracle](https://coracle.social/).
+
+Beyond these efforts, Daniele is contributing to a variety of other nostr
+projects, including [Njump](https://github.com/dtonon/njump),
+[go-nostr](https://github.com/nbd-wtf/go-nostr), and
+[nostr-ruby](https://github.com/dtonon/nostr-ruby).
+
+He is also involved in the [Nostr Design initiative](https://nostrdesign.org/),
+which provides comprehensive guidance to help developers enhance the user
+experience across nostr projects.
+
+With the support of this grant, Daniele will focus on:
+
+- Refining  Gossip's onboarding process,
+- Exploring new applications of the outbox model,
+- Developing marketplace-related NIPs, and
+- Ongoing enhancement of Coracle, focusing on accessibility and usability.
+
+Our mission at OpenSats is to provide sustainable funding for the builders and
+maintainers of critical FOSS infrastructure within the Bitcoin and nostr
+ecosystem.
+
+The [LTS program](/blog/nostr-lts-long-term-support-for-nostr-developers) is
+made possible by the generosity of our donors. To continue supporting
+contributors like Daniele, consider donating to [The Nostr Fund](/funds/nostr).
+
 <center>
     <DonateToNostrFundButton/>
 </center>
