--- a/data/blog/vitor-pamplona-receives-lts-grant.mdx
+++ b/data/blog/vitor-pamplona-receives-lts-grant.mdx
@@ -12,18 +12,20 @@ OpenSats is proud to announce that Vitor Pamplona has been granted long-term
 support for his exceptional contributions to the nostr ecosystem.
 
 [Vitor](https://github.com/vitorpamplona) is the creator of Amethyst, a
-widely-used and configurable nostr client for Android users. Among its
-[extensive features](https://github.com/vitorpamplona/amethyst#), Amethyst
-supports multiple user accounts and integrates bitcoin lightning "zaps" to
-enable users to exchange value directly within the app while maintaining its
-focus on privacy and security by allowing traffic routing through the Tor
-network via [Orbot](https://orbot.app/en/).
+widely-used and configurable nostr client for Android users, and one of the
+architects behind the [new hyper-private DM
+protocol](https://github.com/nostr-protocol/nips/blob/master/17.md) for nostr.
+Among its [extensive features](https://github.com/vitorpamplona/amethyst#),
+Amethyst supports multiple user accounts, live streams, marketplaces, group
+chats, custom feeds via data vending machines, and integrates bitcoin lightning
+"zaps" to enable users to exchange value directly within the app while
+maintaining its focus on privacy and security by allowing traffic routing
+through the Tor network via [Orbot](https://orbot.app/en/).
 
-In addition to Amethyst, Vitor has developed a [Push Notification
-Server](https://github.com/vitorpamplona/amethyst-push-notif-server) for
-real-time nostr event updates and
-[Crafters](https://github.com/vitorpamplona/crafters), a nostr-based resume
-builder.
+In addition to Amethyst, Vitor has developed
+[SheetStr](https://sheetstr.amethyst.social/), a collaborative spreadsheet
+client for nostr, and [Crafters](https://github.com/vitorpamplona/crafters), a
+nostr-based resume builder.
 
 With support from this grant, Vitor plans to focus on several key enhancements,
 such as:
@@ -46,6 +48,11 @@ such as:
 
 - Finalizing and implementing the outbox model to enable private, direct
   messaging, minimizing broadcast exposure.
+
+> In every line of code, I see the potential to reshape the world—Amethyst is
+> more than a project; it's my commitment to the verifiable web.
+>
+> <cite>—Vitor Pamplona</cite>
 
 Our mission at OpenSats is to provide sustainable funding for the builders and
 maintainers of critical open-source infrastructure within the Bitcoin and nostr
