Edit run-on sentence

--- a/data/blog/vitor-pamplona-receives-lts-grant.mdx
+++ b/data/blog/vitor-pamplona-receives-lts-grant.mdx
@@ -15,12 +15,14 @@ support for his exceptional contributions to the nostr ecosystem.
 widely-used and configurable nostr client for Android users, and one of the
 architects behind the [new hyper-private DM
 protocol](https://github.com/nostr-protocol/nips/blob/master/17.md) for nostr.
+
 Among its [extensive features](https://github.com/vitorpamplona/amethyst#),
 Amethyst supports multiple user accounts, live streams, marketplaces, group
-chats, custom feeds via [data vending machines](https://www.data-vending-machines.org/), and integrates 
-"zaps" to enable users to exchange value directly within the app while
-maintaining its focus on privacy and security by allowing traffic routing
-through the Tor network via [Orbot](https://orbot.app/en/).
+chats, custom feeds via [data vending
+machines](https://www.data-vending-machines.org/), and integrates "zaps" to
+enable users to exchange value directly within the app. Privacy and security are
+further enhanced by allowing traffic routing through the Tor network via
+[Orbot](https://orbot.app/en/).
 
 In addition to Amethyst, Vitor has developed
 [SheetStr](https://sheetstr.amethyst.social/), a collaborative spreadsheet
