Move link to 1st occurrence of Vitor

--- a/data/blog/vitor-pamplona-receives-lts-grant.mdx
+++ b/data/blog/vitor-pamplona-receives-lts-grant.mdx
@@ -8,12 +8,12 @@ images: ['/static/images/blog/47-vitor-pamplona.jpg']
 summary: "OpenSats Welcomes Vitor Pamplona as an LTS Grantee."
 ---
 
-OpenSats is proud to announce that Vitor Pamplona has been granted long-term
-support for his exceptional contributions to the nostr ecosystem.
+OpenSats is proud to announce that [Vitor
+Pamplona](https://github.com/vitorpamplona) has been granted long-term support
+for his exceptional contributions to the nostr ecosystem.
 
-[Vitor](https://github.com/vitorpamplona) is the creator of Amethyst, a
-widely-used and configurable nostr client for Android users, and one of the
-architects behind the [new hyper-private DM
+Vitor is the creator of Amethyst, a widely-used and configurable nostr client
+for Android users, and one of the architects behind the [new hyper-private DM
 protocol](https://github.com/nostr-protocol/nips/blob/master/17.md) for nostr.
 
 Among its [extensive features](https://github.com/vitorpamplona/amethyst#),
