--- a/data/blog/vitor-pamplona-receives-lts-grant.mdx
+++ b/data/blog/vitor-pamplona-receives-lts-grant.mdx
@@ -16,7 +16,7 @@ Vitor is the creator of Amethyst, a widely-used and configurable nostr client
 for Android users, and one of the architects behind the [new hyper-private DM
 protocol](https://github.com/nostr-protocol/nips/blob/master/17.md) for nostr.
 
-Among its [extensive features](https://github.com/vitorpamplona/amethyst#),
+Among its [extensive features](https://github.com/vitorpamplona/amethyst),
 Amethyst supports multiple user accounts, live streams, marketplaces, group
 chats, custom feeds via [data vending
 machines](https://www.data-vending-machines.org/), and integrates "zaps" to
