--- a/data/blog/vitor-pamplona-receives-lts-grant.mdx
+++ b/data/blog/vitor-pamplona-receives-lts-grant.mdx
@@ -25,7 +25,7 @@ further enhanced by allowing traffic routing through the Tor network via
 [Orbot](https://orbot.app/en/).
 
 In addition to Amethyst, Vitor has developed
-[SheetStr](https://sheetstr.amethyst.social/), a collaborative spreadsheet
+[Sheetstr](https://sheetstr.amethyst.social/), a collaborative spreadsheet
 client for nostr, and [Crafters](https://github.com/vitorpamplona/crafters), a
 nostr-based resume builder.
 
