--- a/data/blog/daniele-receives-lts-grant.mdx
+++ b/data/blog/daniele-receives-lts-grant.mdx
@@ -10,34 +10,43 @@ summary: "OpenSats Welcomes Daniele as an LTS Grantee."
 
 OpenSats is pleased to announce that [Daniele](https://github.com/dtonon) is
 joining our roster of long-term support grantees for his contributions to the
-nostr ecosystem.
+Nostr ecosystem.
 
 Daniele's experience in ecommerce development, expertise in UI/UX design, and
-deep understanding of the [outbox
-model](https://highscalability.com/gossip-protocol-explained/) has made him a
-key contributor in improving accessibility, usability, and scalability for users
-across different platforms. He has contributed to several nostr projects,
-including [Gossip](https://github.com/mikedilger/gossip#) and
-[Coracle](https://coracle.social/).
-
-Beyond these efforts, Daniele is contributing to a variety of other nostr
-projects, including [Njump](https://github.com/dtonon/njump),
-[go-nostr](https://github.com/nbd-wtf/go-nostr), and
-[nostr-ruby](https://github.com/dtonon/nostr-ruby).
+deep understanding of the Nostr paradigm, has made him a key contributor in
+improving accessibility, usability, and scalability for users across different
+platforms.  
+He has contributed to several nostr projects, including
+[Gossip](https://github.com/mikedilger/gossip),
+[Coracle](https://coracle.social/), [Njump](https://github.com/dtonon/njump),
+[Oracolo](https://github.com/dtonon/oracolo),
+[go-nostr](https://github.com/nbd-wtf/go-nostr),
+[nostr-ruby](https://github.com/dtonon/nostr-ruby), and
+[window.nostr.js](https://github.com/fiatjaf/window.nostr.js)
 
 He is also involved in the [Nostr Design initiative](https://nostrdesign.org/),
 which provides comprehensive guidance to help developers enhance the user
-experience across nostr projects.
+experience across Nostr projects.
 
 With the support of this grant, Daniele will focus on:
 
-- Refining  Gossip's onboarding process,
-- Exploring new applications of the outbox model,
-- Developing marketplace-related NIPs, and
-- Ongoing enhancement of Coracle, focusing on accessibility and usability.
+- Refining Gossip's and Coracle's user experience, focusing on accessibility and
+  usability,
+- Exploring new applications around groups and communities,
+- Developing marketplace-related NIPs and supporting related apps, and
+- Building a new sign-up paradigm/tool to facilitate the onboarding process.
+
+> After thinking and acting right on a personal basis, investing in freedom
+> technology is the only way we have to change the world for better, because
+> technology is a powerful leverage and we need absolutely to be sure that the
+> oppressive/unfair/dystopian version won't win. Supporting the Nostr ecosystem
+> with a mix between product design, user experience and development is what I
+> can do to help on this front.
+>
+> <cite>— Daniele</cite>
 
 Our mission at OpenSats is to provide sustainable funding for the builders and
-maintainers of critical FOSS infrastructure within the Bitcoin and nostr
+maintainers of critical FOSS infrastructure within the Bitcoin and Nostr
 ecosystem.
 
 The [LTS program](/blog/nostr-lts-long-term-support-for-nostr-developers) is
