Add missing punctuation

--- a/data/blog/daniele-receives-lts-grant.mdx
+++ b/data/blog/daniele-receives-lts-grant.mdx
@@ -22,7 +22,7 @@ He has contributed to several nostr projects, including
 [Oracolo](https://github.com/dtonon/oracolo),
 [go-nostr](https://github.com/nbd-wtf/go-nostr),
 [nostr-ruby](https://github.com/dtonon/nostr-ruby), and
-[window.nostr.js](https://github.com/fiatjaf/window.nostr.js)
+[window.nostr.js](https://github.com/fiatjaf/window.nostr.js).
 
 He is also involved in the [Nostr Design initiative](https://nostrdesign.org/),
 which provides comprehensive guidance to help developers enhance the user
