--- a/data/blog/50-support-for-tor.mdx
+++ b/data/blog/50-support-for-tor.mdx
@@ -5,5 +5,5 @@ tags: ['OpenSats', 'grants', 'bitcoin']
 draft: false
 authors: ['arvin', 'dergigi']
 images: ['/static/images/blog/50-support-for-tor.jpg']
-summary: "OpenSats announces a grant supporting The Tor Project."
+summary: "OpenSats is supporting the Tor Project's efforts to enhance privacy on the Web."
 ---
