Edit duplicate quotation marks

--- a/data/blog/50-support-for-tor.mdx
+++ b/data/blog/50-support-for-tor.mdx
@@ -40,9 +40,9 @@ safeguarding the ecosystem by increasing privacy:
   [NAT](https://en.wikipedia.org/wiki/Network_address_translation) or firewall
   setups and allowing controlled access without relying on DNS.
 
-> "We believe everyone should be able to explore the internet with privacy.
+> We believe everyone should be able to explore the internet with privacy.
 > [...] We advance human rights and defend your privacy online through free
-> software and open networks."
+> software and open networks.
 >
 ><cite>—The Tor Project</cite>
 
