Grantee change request.

--- a/data/blog/caring-for-bitcoin-core.mdx
+++ b/data/blog/caring-for-bitcoin-core.mdx
@@ -103,8 +103,7 @@ functional tests. Using their strong background in
 bring a meticulous and thorough approach to Bitcoin Core.
 
 This grant will support efforts in reviewing pull requests from other
-contributors, diagnosing and addressing the slowness of the
-[`feature_dbcrash.py`](https://github.com/bitcoin/bitcoin/pull/29791) test,
+contributors, diagnosing and addressing the slowness of some extended functional tests,
 enhancing build information logs for better troubleshooting, and creating a tool
 to identify regressions by analyzing the impact of different commits on test
 outcomes. Additionally, the project will modify test timeout behaviors to
