Add bold text to bullet points

--- a/data/blog/alex-gleason-receives-lts-grant.mdx
+++ b/data/blog/alex-gleason-receives-lts-grant.mdx
@@ -30,17 +30,17 @@ nostr framework for web browsers and [Deno](https://docs.deno.com/); and
 
 With the support of this grant, Alex plans to:
 
-- Introduce new features such as purchasing
+- **Introduce new features** such as purchasing
   [NIP-05](https://github.com/nostr-protocol/nips/blob/master/05.md) usernames
   with [Zaps](https://github.com/nostr-protocol/nips/blob/master/57.md), a
   digital shop for profile customization, and improved support for [Mastodon
   apps](https://joinmastodon.org/apps).
 
-- Grow the community by migrating existing Soapbox servers, onboarding various
+- **Grow the community** by migrating existing Soapbox servers, onboarding various
   nostr communities, and launching initiatives like
   [Henhouse.social](https://henhouse.social/)---a nostr community for women.
 
-- Refine and expand Ditto with bug fixes, UX enhancements, as well as
+- **Refine and expand Ditto** with bug fixes, UX enhancements, as well as
   performance and stability improvements.
 
 Our mission at OpenSats is to provide sustainable funding for the builders and
