--- a/data/blog/tor-receives-support-grant.mdx
+++ b/data/blog/tor-receives-support-grant.mdx
@@ -30,7 +30,7 @@ The integration of the Tor network with Bitcoin has [always played a crucial
 role](https://satoshi.nakamotoinstitute.org/posts/bitcointalk/45/) in
 safeguarding the ecosystem by increasing privacy:
 
-- Anonymize Network Communications: Protect miner and node operators' IP
+- **Anonymize Network Communications:** Protect IP addresses of miners, node operators, and users 
   addresses from tracing and surveillance.
 
 - Run Bitcoin Infrastructure as Onion Services: Operate nodes and other
