--- a/data/blog/tor-receives-support-grant.mdx
+++ b/data/blog/tor-receives-support-grant.mdx
@@ -31,7 +31,7 @@ role](https://satoshi.nakamotoinstitute.org/posts/bitcointalk/45/) in
 safeguarding the ecosystem by increasing privacy:
 
 - **Anonymize Network Communications:** Protect IP addresses of miners, node operators, and users 
-  addresses from tracing and surveillance.
+  from tracing and surveillance.
 
 - Run Bitcoin Infrastructure as Onion Services: Operate nodes and other
   infrastructure as Tor [onion
