--- a/data/blog/tor-receives-support-grant.mdx
+++ b/data/blog/tor-receives-support-grant.mdx
@@ -28,7 +28,7 @@ enhance usability and privacy further.
 
 The integration of the Tor network with Bitcoin has [always played a crucial
 role](https://satoshi.nakamotoinstitute.org/posts/bitcointalk/45/) in
-safeguarding the ecosystem by increasing privacy:
+safeguarding the ecosystem by increasing privacy. It allows bitcoiners to:
 
 - **Anonymize Network Communications:** Protect IP addresses of miners, node operators, and users 
   from tracing and surveillance.
