--- a/data/blog/tor-receives-support-grant.mdx
+++ b/data/blog/tor-receives-support-grant.mdx
@@ -33,7 +33,7 @@ safeguarding the ecosystem by increasing privacy. It allows bitcoiners to:
 - **Anonymize Network Communications:** Protect IP addresses of miners, node operators, and users 
   from tracing and surveillance.
 
-- Run Bitcoin Infrastructure as Onion Services: Operate nodes and other
+- **Run Bitcoin Infrastructure as Onion Services:** Operate nodes and other
   infrastructure as Tor [onion
   services](https://en.bitcoin.it/wiki/Setting_up_a_Tor_hidden_service) with
   `.onion` addresses, simplifying connectivity by reducing the need for
