--- a/data/blog/tor-receives-support-grant.mdx
+++ b/data/blog/tor-receives-support-grant.mdx
@@ -49,7 +49,7 @@ safeguarding the ecosystem by increasing privacy. It allows bitcoiners to:
 This grant will allow The Tor Project to expand its team of [onion
 service](https://gitlab.torproject.org/tpo/onion-services) developers, which
 will be instrumental in releasing substantial improvements to onion services,
-including a protection mechanism against [DDoS
+including an improved protection mechanism against [DDoS
 attacks](https://en.wikipedia.org/wiki/Denial-of-service_attack). Strengthening
 this team will ensure that Tor continues to provide reliable, anonymous, and
 secure communication for a global user base, including those in heavily censored
