Replace grantee project
NosDrive >> Letr

--- a/data/blog/alex-gleason-receives-lts-grant.mdx
+++ b/data/blog/alex-gleason-receives-lts-grant.mdx
@@ -26,7 +26,8 @@ nostr with the [Fediverse](https://activitypub.rocks/);
 self-hostable front-end for decentralized social networks;
 [Nostrify](https://gitlab.com/soapbox-pub/nostrify/-/blob/main/README.md), a
 nostr framework for web browsers and [Deno](https://docs.deno.com/); and
-[NosDrive](https://nosdrive.app/), an experimental Google Drive relay for nostr.
+[Letr](https://www.letr.co/), a dynamic creator platform built on nostr for sharing 
+diverse content, prioritizing creator compensation.
 
 With the support of this grant, Alex plans to:
 
