--- a/data/blog/tor-receives-support-grant.mdx
+++ b/data/blog/tor-receives-support-grant.mdx
@@ -30,15 +30,13 @@ The integration of the Tor network with Bitcoin has [always played a crucial
 role](https://satoshi.nakamotoinstitute.org/posts/bitcointalk/45/) in
 safeguarding the ecosystem by increasing privacy. It allows bitcoiners to:
 
-- **Anonymize Network Communications:** Protect IP addresses of miners, node operators, and users 
-  from tracing and surveillance.
+- **Anonymize Network Communications:** Protect IP addresses of miners, node
+  operators, and users from tracing and surveillance.
 
 - **Run Bitcoin Infrastructure as Onion Services:** Operate nodes and other
-  infrastructure as Tor [onion
-  services](https://en.bitcoin.it/wiki/Setting_up_a_Tor_hidden_service) with
-  `.onion` addresses, simplifying connectivity by reducing the need for
-  [NAT](https://en.wikipedia.org/wiki/Network_address_translation) or firewall
-  setups and allowing controlled access without relying on DNS.
+  infrastructure as [onion
+  services](https://en.bitcoin.it/wiki/Setting_up_a_Tor_hidden_service), massively
+  increasing privacy for yourself and others.
 
 > We believe everyone should be able to explore the internet with privacy.
 > [...] We advance human rights and defend your privacy online through free
