Re-word bullet point section

--- a/data/blog/tor-receives-support-grant.mdx
+++ b/data/blog/tor-receives-support-grant.mdx
@@ -30,13 +30,12 @@ The integration of the Tor network with Bitcoin has [always played a crucial
 role](https://satoshi.nakamotoinstitute.org/posts/bitcointalk/45/) in
 safeguarding the ecosystem by increasing privacy. It allows bitcoiners to:
 
-- **Anonymize Network Communications:** Protect IP addresses of miners, node
-  operators, and users from tracing and surveillance.
+- **Anonymize their network communications,** effectively protecting the IP
+addresses of the user from tracing and surveillance, whether it be miner, node
+operator, service provider, or regular user.
 
-- **Run Bitcoin Infrastructure as Onion Services:** Operate nodes and other
-  infrastructure as [onion
-  services](https://en.bitcoin.it/wiki/Setting_up_a_Tor_hidden_service), massively
-  increasing privacy for yourself and others.
+- **Run infrastructure as Onion Services,** massively increasing the privacy of
+node runners and other infrastructure providers, as well as their users.
 
 > We believe everyone should be able to explore the internet with privacy.
 > [...] We advance human rights and defend your privacy online through free
