Add link to "Onion Services"

--- a/data/blog/tor-receives-support-grant.mdx
+++ b/data/blog/tor-receives-support-grant.mdx
@@ -34,14 +34,15 @@ safeguarding the ecosystem by increasing privacy. It allows bitcoiners to:
 addresses of the user from tracing and surveillance, whether it be miner, node
 operator, service provider, or regular user.
 
-- **Run infrastructure as Onion Services,** massively increasing the privacy of
+- **Run infrastructure as [Onion Services][os],** massively increasing the privacy of
 node runners and other infrastructure providers, as well as their users.
 
-This grant will allow The Tor Project to expand its team of [onion
-service](https://gitlab.torproject.org/tpo/onion-services) developers, which
-will be instrumental in releasing substantial improvements to onion services,
-including an improved protection mechanism against [DDoS
-attacks](https://en.wikipedia.org/wiki/Denial-of-service_attack).
+[os]: https://community.torproject.org/onion-services/
+
+This grant will allow The Tor Project to expand its team of [onion service
+developers](https://gitlab.torproject.org/tpo/onion-services), which will be
+instrumental in releasing substantial improvements to onion services, including
+an improved protection mechanism against DDoS attacks.
 
 > We believe everyone should be able to explore the internet with privacy.
 > [...] We advance human rights and defend your privacy online through free
