--- a/data/blog/tor-receives-support-grant.mdx
+++ b/data/blog/tor-receives-support-grant.mdx
@@ -42,19 +42,18 @@ node runners and other infrastructure providers, as well as their users.
 This grant will allow The Tor Project to expand its team of [onion service
 developers](https://gitlab.torproject.org/tpo/onion-services), which will be
 instrumental in releasing substantial improvements to onion services, including
-an improved protection mechanism against DDoS attacks.
+an improved protection mechanism against DDoS attacks.  Strengthening this team
+will ensure that Tor continues to provide reliable, anonymous, and secure
+communication for a global user base, including those in heavily censored
+regions. This is particularly important for the Bitcoin ecosystem, as users
+expose themselves to various risks if they can't connect to the Bitcoin network
+in a private manner.
 
 > We believe everyone should be able to explore the internet with privacy.
 > [...] We advance human rights and defend your privacy online through free
 > software and open networks.
 >
 ><cite>—The Tor Project</cite>
-
-Strengthening this team will ensure that Tor continues to provide reliable,
-anonymous, and secure communication for a global user base, including those in
-heavily censored regions. This is particularly important for the Bitcoin
-ecosystem, as users expose themselves to various risks if they can't connect to
-the Bitcoin network in a private manner.
 
 OpenSats is committed to supporting developers and contributors who strengthen
 the open-source foundations of Bitcoin, nostr, and related technologies.
